# google_jobs_scraper

./: .gitignore  README.md  google_jobs.py  pyproject.toml  requirements.txt
